# TuyaOpen

apps/tuya.ai/duo_eye_mood/: CMakeLists.txt
apps/tuya.ai/duo_eye_mood/src/: app_chat_bot.c  tuya_main.c
apps/tuya.ai/your_chat_bot/config/: DshanPi_A1.config  (+1 more)
apps/tuya.ai/your_desk_emoji/: Kconfig
apps/tuya.ai/your_robot_dog/: CMakeLists.txt  Kconfig  RAEDME_zh.md  README.md
boards/: Kconfig
boards/ESP32/: OS_SERVICE_Kconfig
boards/LINUX/: Kconfig  TKL_Kconfig
boards/LINUX/DshanPi_A1/: CMakeLists.txt  Kconfig  board_com_api.c  board_com_api.h  tdd_button_keyboard.c  tdd_button_keyboard.h
boards/LINUX/Raspberry_Pi/: CMakeLists.txt  Kconfig  board_com_api.c
boards/LINUX/Ubuntu/: Kconfig
boards/T5AI/: Kconfig
boards/T5AI/T5AI_OTTO/: Kconfig  t5ai_otto.c
boards/T5AI/TUYA_T5AI_BOARD/: tuya_t5ai_ex_module.c  tuya_t5ai_ex_module.h
boards/T5AI/TUYA_T5AI_DOG/: Kconfig  board_com_api.h  tuya_t5ai_robot_dog.c
boards/T5AI/WAVESHARE_T5AI_TOUCH_AMOLED_1_75/: board_com_api.c
examples/peripherals/button/: CMakeLists.txt
platform/: platform_config.yaml
src/peripherals/audio_codecs/: Kconfig
src/peripherals/display/: Kconfig
src/tal_driver/uart/: tal_uart.c
src/tal_system/src/: tal_log.c
src/tuya_ai_service/: CMakeLists.txt
src/tuya_ai_service/svc_ai_agent/: Kconfig
src/tuya_ai_service/svc_ai_codec/: Kconfig
src/tuya_cloud_service/cloud/: tuya_iot.c  tuya_register_center.c
src/tuya_cloud_service/netcfg/: ap_netcfg.c
src/tuya_cloud_service/schema/: dp_schema.c
src/tuya_cloud_service/tls/: tuya_tls.c
tools/cli_command/: cli_build.py
(+117 files in other folders)
